# eaddit

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  create-issues.yml
.jules/: bolt.md  sentinel.md
.tsks/: tasks.jsonl
eaddit/: __init__.py  __main__.py  chunker.py  cli.py  collector.py  embedder.py  ingest.py  models.py  rag.py  store.py
examples/: fixture.json
tests/: conftest.py  test_chunker.py  test_cli.py  test_collector.py  test_embedder.py  test_ingest.py  test_models.py  test_rag.py  test_security.py  test_store.py
